@@ -1,5 +1,7 @@
 exports.run = async (client, message, args) => {
 
+  var name, name1;
+  var rating = Math.floor(Math.random() * 100) + 1;
   var hearts = [
     "❤️",
     "🧡",
@@ -9,53 +11,34 @@ exports.run = async (client, message, args) => {
     "💜"
   ];
   
-  if(!args[0] || !args[1]) {
-    return message.channel.send(`<:error:466995152976871434> Please include at least two names.`)
+  if(args.length < 2) {
+    return message.channel.send(`<:error:466995152976871434> Please include two names/users.`)
   }
 
-  let names = [];
-  let totalLength = 0;
-
-  for(let i = 0; i < args.length; i++) {
-    let arg = args[i];
-    let name = client.getUserFromMention(arg).username;
-    if(!name) {
-      name = arg;
-    };  
-    names.push(name);
-    totalLength += arg.length;
-  }
-
-  let lengthPerName = Math.floor(totalLength / names.length);
-
-  let finalName = '';
-
-  let last = -1;
-
-  for(let i = 0; i < names.length; i++) {
-    let name = names[i];
-    let l = Math.min(lengthPerName, name.length);
-
-    let p = name.substr(last + 1, last + l);
-
-    console.log(p);
-
-    finalName = finalName + p;
-
-    last = last + l;
+  if(message.guild && message.mentions.members && message.mentions.members.size > 0) {
+      name = message.mentions.members.first().displayName;
   };
 
-  console.log(totalLength);
-  console.log(names.length);
-  console.log(lengthPerName);
-  console.log(finalName);
+  if(message.guild && message.mentions.members && message.mentions.members.size > 1) {
+    name1 = message.mentions.members.last().displayName;
+  };
 
-  message.channel.send(`**Ship generator:**\n${hearts.random()} Ship name: \`${finalName}\`\n${hearts.random()} Compatibility rating:`)
+  if(!name) {
+    name = args[0];
+  };
+
+  if(!name1) {
+    name1 = args[1];
+  };
+
+  shipName = name.substring(0, client.intBetween(1,name.length))+name1.substring(client.intBetween(0,name1.length));
+
+  message.channel.send(`__**Ship Generator:**__\n${hearts.random()} Ship Name: \`${shipName}\`\n${hearts.random()} Compatibility rating: \`${rating}%\``)
 };
 
 exports.conf = {
   enabled: true,
-  guildOnly: true,
+  guildOnly: false,
   aliases: [],
   permLevel: "User",
   requiredPerms: []
